sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:13: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
       if ((i+(j+1)*ecart) <= getNombreValeurs-1 && d=0){
                                                 ^